fixed spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -184,7 +184,7 @@ section{
     background: white; 
     padding: 2em; 
     border-radius: 1em; 
-    margin-bottom: 0.1em; 
+    margin-bottom: 1em; 
     
     .icon-container {
         height: 100px;
